@@ -1,4 +1,5 @@
 --no-transfer-progress
 --batch-mode
+--enable-preview
 -Dmaven.compiler.enablePreview=true
 -Dmaven.compiler.release=26
